# 7542_TpFinal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  HelloWorld.cpp  LICENSE  ManualDeUsuario.md  README.md  Untitled Diagram.drawio  client_config.yaml  config.yaml  desinstaller.sh  installer.sh  run_cppcheck  run_valgrind
client/: Button.cpp  Button.h  BuyingMenu.cpp  BuyingMenu.h  CMakeLists.txt  CMakeLists.txt.orig  Camera.cpp  Camera.h  CharacterManager.cpp  CharacterManager.h  Client.cpp  Client.h  Cursor.cpp  Cursor.h  Drawer.cpp  Drawer.h  Hud.cpp  Hud.h  LobbyScreen.cpp  LobbyScreen.h  MapView.cpp  MapView.h  NonMovable.cpp  NonMovable.h  Receiver.cpp  Receiver.h  Renderizable.cpp  Renderizable.h  ScoreScreen.cpp  ScoreScreen.h  SdlLoop.cpp  SdlLoop.h  Sender.cpp  Sender.h  SkinSelector.cpp  SkinSelector.h  SoundManager.cpp  SoundManager.h  Stencil.cpp  Stencil.h  (+4 more)
client/anim/: Animation.cpp  Animation.h  CMakeLists.txt  Character.cpp  Character.h  Explosion.cpp  Explosion.h  Explotion.cpp  Explotion.h  Makefile  PositionVector.cpp  PositionVector.h  Renderizable.cpp  Renderizable.h  Terrorist.cpp  Terrorist.h  Tile.cpp  Tile.h
client/commands/: Attack.cpp  Attack.h  Buy.cpp  Buy.h  CMakeLists.txt  ChangeWeapon.cpp  ChangeWeapon.h  Command.cpp  Command.h  CommandTester.cpp  CreateGame.cpp  CreateGame.h  EarlyStart.cpp  EarlyStart.h  JoinGame.cpp  JoinGame.h  ListGame.cpp  ListGame.h  ListMaps.cpp  ListMaps.h  Move.cpp  Move.h  Pickup.cpp  Pickup.h  Plant.cpp  Plant.h  Reload.cpp  Reload.h  Rotate.cpp  Rotate.h
client/qt/: CMakeLists.txt  CounterStrikeStyle.cpp  CounterStrikeStyle.h  IntroWindow.cpp  IntroWindow.h  LogInInfo.cpp  LogInInfo.h  LogInWindow.cpp  LogInWindow.h  MapConfigWindow.cpp  MapConfigWindow.h  QEditorMapListWidget.cpp  QEditorMapListWidget.h  UserNameWindow.cpp  UserNameWindow.h  resources.qrc
client/sdlwrap/: Area.cpp  Area.h  CMakeLists.txt  SdlSound.cpp  SdlSound.h  SdlStencilTexture.h  SdlStencilTexure.cpp  SdlText.cpp  SdlText.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h
client/src/: CMakeLists.txt  client.cpp  client.h  client_main.cpp  client_tp.cpp  client_tp.h  main.cpp
client/weapons/: CMakeLists.txt  DroppedWeapon.cpp  DroppedWeapon.h  Knife.cpp  Knife.h  Weapon.cpp  Weapon.h
common/: BlockingQueue.h  CMakeLists.txt  CMakeLists.txt.orig  ConfigVariables.h  Exception.cpp  Exception.h  ProtectedQueue.h  Protocol.cpp  Protocol.h  Thread.cpp  Thread.h  lock.cpp  lock.h  protocol.cpp  protocol.h  socket.cpp  socket.h  ta_te_ti_cifrador.cpp  ta_te_ti_cifrador.h  ta_te_ti_constantes.h  ta_te_ti_descifrador.cpp  ta_te_ti_descifrador.h  ta_te_ti_logica.cpp  ta_te_ti_logica.h  thread.cpp  thread.h
config/: client_config.yaml  mapIconsType.yml  server_config.yaml
editor/: .gitignore  CMakeLists.txt  CounterStrikeStyle.cpp  CounterStrikeStyle.h  Editor.cpp  Editor.h  Elements.h  IntroWindow.cpp  IntroWindow.h  MapConfigWindow.cpp  MapConfigWindow.h  MapConfigWindow.ui  MapCreationWindow.cpp  MapCreationWindow.h  MapEditor.cpp  MapEditor.h  MapEditor.ui  MapIconGenerator.cpp  MapIconGenerator.h  MapListWindow.cpp  MapListWindow.h  MapListWindow.ui  MapQPixmapGenerator.cpp  MapQPixmapGenerator.h  MapWidget.h  PiecesList.cpp  PiecesList.h  PuzzleWidget.cpp  PuzzleWidget.h  QEditorItemsWidget.cpp  QEditorItemsWidget.h  QEditorMapListWidget.cpp  QEditorMapListWidget.h  QEditorMapWidget.cpp  QEditorMapWidget.h  QTile.cpp  QTile.h  README.md  ZoneValidator.cpp  ZoneValidator.h  (+10 more)
editor/StartingScreen/: CMakeLists.txt  MapCreationWindow.cpp  MapCreationWindow.h  MapCreationWindow.ui  MapEditor.cpp  MapEditor.h  MapEditor.ui  MapListWindow.cpp  MapListWindow.h  MapWidget.cpp  MapWidget.h  PiecesList.cpp  PiecesList.h  PuzzleWidget.cpp  PuzzleWidget.h  QTile.cpp  QTile.h  QTile.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
editor/config/: editor-config.yml  img-config.yml
maps/: a.yml  map.yml  mapa.yml  mapa1.yml  mapa2.yml  mapita.yml
server/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  GamesMonitor.cpp  GamesMonitor.h  Knife.cpp  Knife.h  MapLayout.cpp  MapLayout.h  PlayerModel.cpp  PlayerModel.h  Tally.cpp  Tally.h  ThReceiver.cpp  ThReceiver.h  WorldModel.cpp  WorldModel.h  game.cpp  game.h  games.cpp  games.h  main.cpp  match.cpp  match.h  partidas_disponibles.cpp  partidas_disponibles.h  repositorio_de_tableros.cpp  repositorio_de_tableros.h  server.cpp  server.h  server_main.cpp  server_tp.cpp  server_tp.h  th_acceptor.cpp  th_acceptor.h  th_client.cpp  th_client.h  th_login.cpp  th_login.h  th_loop.cpp  (+5 more)
server/events/: BuyEvent.cpp  BuyEvent.h  ClientEvent.cpp  ClientEvent.h  DisconnectEvent.cpp  DisconnectEvent.h  EquipWeaponEvent.cpp  EquipWeaponEvent.h  MoveEvent.cpp  MoveEvent.h  PickUpEvent.cpp  PickUpEvent.h  ReloadEvent.cpp  ReloadEvent.h  RotateEvent.cpp  RotateEvent.h  StartAttackEvent.cpp  StartAttackEvent.h  StartMoveEvent.cpp  StartMoveEvent.h  StartPlantEvent.cpp  StartPlantEvent.h  StopAttackEvent.cpp  StopAttackEvent.h  StopMoveEvent.cpp  StopMoveEvent.h  StopPlantEvent.cpp  StopPlantEvent.h
server/updates/: AngleUpdate.cpp  AngleUpdate.h  AttackUpdate.cpp  AttackUpdate.h  BombExplodeUpdate.cpp  BombExplodeUpdate.h  BombPlantUpdate.cpp  BombPlantUpdate.h  BuyTimeUpdate.cpp  BuyTimeUpdate.h  ClipUpdate.cpp  ClipUpdate.h  CtWinRoundUpdate.cpp  CtWinRoundUpdate.h  DeadUpdate.cpp  DeadUpdate.h  FinalScreenUpdate.cpp  FinalScreenUpdate.h  GameDoneUpdate.cpp  GameDoneUpdate.h  HitUpdate.cpp  HitUpdate.h  HpUpdate.cpp  HpUpdate.h  MapUpdate.cpp  MapUpdate.h  MoneyUpdate.cpp  MoneyUpdate.h  PositionUpdate.cpp  PositionUpdate.h  TeamsUpdate.cpp  TeamsUpdate.h  TimeUpdate.cpp  TimeUpdate.h  TtWinRoundUpdate.cpp  TtWinRoundUpdate.h  Update.cpp  Update.h  UpdateManager.cpp  UpdateManager.h  (+4 more)
server/weapons/: Armory.cpp  Armory.h  Awp.cpp  Awp.h  Bomb.cpp  Bomb.h  DroppedWeapons.cpp  DroppedWeapons.h  Knife.cpp  Knife.h  Pistol.cpp  Pistol.h  Rifle.cpp  Rifle.h  Shotgun.cpp  Shotgun.h  Weapon.cpp  Weapon.h
