add_library(lib_server
    match.cpp
    main.cpp
    server.cpp
    th_acceptor.cpp
    th_login.cpp
    th_sender.cpp
    user.cpp
    GamesMonitor.cpp
    ThReceiver.cpp
    PlayerModel.cpp
    WorldModel.cpp
    updates/Update.cpp
    events/ClientEvent.cpp
    events/ClientEvent.h
    Broadcaster.cpp
    weapons/Weapon.cpp
    weapons/Knife.cpp
    weapons/Pistol.cpp
    weapons/Awp.cpp
    weapons/Shotgun.cpp
    weapons/Armory.cpp
    events/StartMoveEvent.cpp 
    events/StopMoveEvent.cpp
    events/StopAttackEvent.cpp
    events/StartAttackEvent.cpp
    updates/PositionUpdate.cpp 
    events/RotateEvent.cpp 
    updates/AngleUpdate.cpp 
    updates/AttackUpdate.cpp
    updates/HitUpdate.cpp
    updates/DeadUpdate.cpp   )

