add_library(lib_server
    match.cpp
    main.cpp
    server.cpp
    th_acceptor.cpp
    th_login.cpp
    th_sender.cpp
    user.cpp
    GamesMonitor.cpp
    ThReceiver.cpp
    PlayerModel.cpp
    WorldModel.cpp
    updates/Update.cpp
    events/ClientEvent.cpp
    events/ClientEvent.h
    Broadcaster.cpp
    weapons/Weapon.cpp
    weapons/Knife.cpp
    weapons/Pistol.cpp
    weapons/Awp.cpp
    weapons/Shotgun.cpp
    weapons/Armory.cpp
    events/StartMoveEvent.cpp 
    events/StopMoveEvent.cpp
    events/StopAttackEvent.cpp
    events/StartAttackEvent.cpp
    events/EquipWeaponEvent.cpp
    updates/PositionUpdate.cpp 
    events/RotateEvent.cpp 
    updates/AngleUpdate.cpp 
    updates/AttackUpdate.cpp
    updates/HitUpdate.cpp
    updates/DeadUpdate.cpp
    updates/WeaponUpdate.cpp events/BuyEvent.cpp events/BuyEvent.h events/DisconnectEvent.cpp events/DisconnectEvent.h weapons/Rifle.cpp weapons/Rifle.h updates/BuyTimeUpdate.cpp updates/BuyTimeUpdate.h weapons/DroppedWeapons.cpp weapons/DroppedWeapons.h updates/WeaponDropUpdate.cpp updates/WeaponDropUpdate.h)

