add_library(lib_server
    match.cpp
    main.cpp
    server.cpp
    th_acceptor.cpp
    th_login.cpp
    th_sender.cpp
    user.cpp
    GamesMonitor.cpp
    ThReceiver.cpp
    PlayerModel.cpp
    WorldModel.cpp
    updates/Update.cpp
    events/ClientEvent.cpp
    events/ClientEvent.h
    Broadcaster.cpp
    MapLayout.cpp
    Tally.cpp
    weapons/Weapon.cpp
    weapons/Knife.cpp
    weapons/Pistol.cpp
    weapons/Awp.cpp
    weapons/Shotgun.cpp
    weapons/Armory.cpp
    events/StartMoveEvent.cpp 
    events/StopMoveEvent.cpp
    events/StopAttackEvent.cpp
    events/StartAttackEvent.cpp
    events/EquipWeaponEvent.cpp
    updates/PositionUpdate.cpp 
    events/RotateEvent.cpp 
    updates/AngleUpdate.cpp 
    updates/AttackUpdate.cpp
    updates/HitUpdate.cpp
    updates/DeadUpdate.cpp
    updates/WeaponUpdate.cpp 
    events/BuyEvent.cpp 
    events/DisconnectEvent.cpp 
    events/PickUpEvent.cpp 
    weapons/Rifle.cpp
    updates/BuyTimeUpdate.cpp     
    weapons/DroppedWeapons.cpp
    updates/WeaponDropUpdate.cpp
    updates/TimeUpdate.cpp
    updates/MoneyUpdate.cpp
    updates/HpUpdate.cpp
    updates/TeamsUpdate.cpp)


